@@ -5,6 +5,7 @@ core_file_size "unlimited";
 max_nofile 102400;
 worker_proc 1;
 thread_mode off;
+log_path "/usr/local/melon/logs/melon.log";
 /*
  * Configurations in the 'exec_proc' are the
  * processes which are customized by user.
