@@ -1,5 +1,6 @@
 Changes with melon 1.3.1                                          20 Oct 2015
     *) Fixed a bug of event component.
+    *) Added a configuration command for log path.
 
 Changes with melon 1.3.0                                          17 Sep 2015
     *) Added a log level (Warn).
